added login functionality

--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -3,12 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         <link
-            href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
             rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         />
-
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -17,12 +15,10 @@
     <body>
         <%- include('./partials/header') %>
 
-        <section class="overview">
-            <div class="card-container">
-                <% tours.forEach(tour=>{ %>
-                <%-include('./partials/overviewCard', {tour}) %> <% }) %>
-            </div>
-        </section>
+        <div class="card-container">
+            <% tours.forEach(tour=>{ %> <%-include('./partials/card', {tour}) %>
+            <% }) %>
+        </div>
 
         <%- include('./partials/footer') %>
     </body>
