--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,3 @@
-<link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-/>
-
 <div class="footer">
     <div class="footer__logo">
         <img src="/img/logo-green.png" alt="Natours logo" />
@@ -15,11 +10,8 @@
         <li><a href="#">Contact</a></li>
     </ul>
     <p class="footer__copyright">
-        <a
-            href="https://github.com/rajatverma311201/Adventour"
-            class="github-link"
-        >
-            <i class="fa-brands fa-github fa-2x"></i>&nbsp; Rajat Verma
+        <a href="https://github.com/rajatverma311201/Adventour" class="github">
+            <i class="fa-brands fa-github fa-2x"></i>&nbsp; Github Link
         </a>
     </p>
 </div>
