--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
                 <h2 class="heading-secondary ma-bt-lg">
                     Log into your account
                 </h2>
-                <form class="form" method="POST" action="/login">
+                <form class="form form-login" method="POST" action="/login">
                     <div class="form__group">
                         <label class="form__label" for="email"
                             >Email address</label
