improved dark mode functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,7 +306,9 @@ body {
 }
 
 .header {
-    background-color: #444;
+    background-color: var(--color-dark);
+    -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.5);
     padding: 0 5rem;
     height: 8rem;
     position: relative;
@@ -809,7 +811,10 @@ body {
 }
 
 .footer {
-    background-color: var(--color-dark-secondary);
+
+    -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.5);
+    background-color: var(--color-dark);
     padding: 6rem 4rem 3rem 4rem;
     font-size: 1.4rem;
     display: grid;
@@ -818,6 +823,7 @@ body {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    margin-top: 5rem;
 }
 @media only screen and (max-width: 50em) {
     .footer {
@@ -1242,9 +1248,9 @@ body {
 .login-form {
     margin: 0 auto;
     max-width: 55rem;
-    background-color: #fff;
-    -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
-    box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
+    background-color: var(--color-dark);
+    -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.25);
     padding: 5rem 7rem;
     border-radius: 5px;
 }
@@ -1358,5 +1364,13 @@ input[type='password'] {
 }
 
 .nav__search input[type='text'] {
-    background-color: #444;
+    background-color: var(--color-dark);
+}
+
+.form-login input[type='email'],
+.form-login input[type='password'],
+.form-login input[type='email']:active,
+.form-login input[type='password']:active .form-login input[type='email']:focus,
+.form-login input[type='password']:focus {
+    background-color: var(--color-dark-secondary);
 }
