--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="/css/style.css" />
-        <title>Document</title>
+        <title>Natours | Log In</title>
     </head>
     <body>
         <%- include('./partials/header') %>
@@ -21,6 +21,9 @@
                         <label class="form__label" for="email"
                             >Email address</label
                         ><input
+                            style="
+                                background-color: var(--color-dark-secondary);
+                            "
                             class="form__input"
                             id="email"
                             type="email"
@@ -33,6 +36,9 @@
                         <label class="form__label" for="password"
                             >Password</label
                         ><input
+                            style="
+                                background-color: var(--color-dark-secondary);
+                            "
                             class="form__input"
                             id="password"
                             type="password"
