--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-        <title><%= title %></title>
+        <title>Natours | All Tours</title>
     </head>
     <body>
         <%- include('./partials/header') %>
