--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="/css/style.css" />
-        <title>Natours | Log In</title>
+        <title>Adventour | Log In</title>
     </head>
     <body>
         <%- include('./partials/header') %>
