--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="shortcut icon" type="image/png" href="/img/favicon.png" />
 
-        <title>Natours | <%= tour.name %></title>
+        <title>Adventour | <%= tour.name %></title>
 
         <script src="https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
         <link
