bug fix on tour page

--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -177,7 +177,8 @@
                 <!-- for loop -->
                 <% reviews.forEach( review =>{ %>
                 <!-- including reviews  -->
-                <%- include("./partials/reviews", {review}) %>
+                <% if(review.user!=null) {%> <%-include("./partials/reviews",
+                {review}) %> <%}%>
                 <!-- reviews end  -->
                 <% }) %>
             </div>
