--- a/views/partials/card.ejs
+++ b/views/partials/card.ejs
@@ -31,7 +31,7 @@
             </svg>
             <span
                 ><%=
-                tour.startDates[0].toLocaleString('en-US',{year:"numeric",month:"long"})
+                tour.startDates[0]?.toLocaleString('en-US',{year:"numeric",month:"long"})
                 %></span
             >
         </div>
