--- a/views/account.ejs
+++ b/views/account.ejs
@@ -24,7 +24,7 @@
                             >
                         </li>
                         <li>
-                            <a href="#"
+                            <a href="/my-bookings"
                                 ><svg>
                                     <use
                                         xlink:href="img/icons.svg#icon-briefcase"
