--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,9 +18,8 @@
         <img src="/img/logo-white.png" alt="Natours logo" />
     </div>
     <nav class="nav nav--user">
-        <a href="#" class="nav__el">My bookings</a>
-
         <%if(user){%>
+        <a href="/my-bookings" class="nav__el">My bookings</a>
         <button class="nav__el nav__el--logout" id="logoutUser">Log out</button>
         <a class="nav__el" href="/me"
             ><img
