fixed some bugs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+        <!-- <script src="/js/index.js" type="module"></script> -->
         <script src="/js/logout.js"></script>
         <%} else{%>
         <a class="nav__el" href="/login">Log in</a>
