--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <form class="nav__search">
             <button class="nav__search-btn">
                 <svg>
-                    <use xlink:href="img/icons.svg#icon-search"></use>
+                    <use xlink:href="/img/icons.svg#icon-search"></use>
                 </svg>
             </button>
             <input
