--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,9 +9,11 @@
         <li><a href="#">Careers</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
-    <p class="footer__copyright">
+    <div class="footer__copyright">
+        <p>Built while learning NodeJS, Express, MongoDB, Mongoose</p>
         <a href="https://github.com/rajatverma311201/Adventour" class="github">
             <i class="fa-brands fa-github fa-2x"></i>&nbsp; Github Link
         </a>
-    </p>
+        <p>Designed by Jonas Schmedtmann</p>
+    </div>
 </div>
