--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,6 +14,6 @@
         <a href="https://github.com/rajatverma311201/Adventour" class="github">
             <i class="fa-brands fa-github fa-2x"></i>&nbsp; Github Link
         </a>
-        <p>Designed by Jonas Schmedtmann</p>
+        <p>Web designed provided by Jonas Schmedtmann</p>
     </div>
 </div>
