--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
         <script src="/js/logout.js"></script>
         <%} else{%>
         <a class="nav__el" href="/login">Log in</a>
-        <a class="nav__el nav__el--cta" href="#">Sign up</a>
+        <a class="nav__el nav__el--cta" href="/signup">Sign up</a>
         <%}%>
     </nav>
 </header>
