--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="/css/style.css" />
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+
         <title>Adventour | Log In</title>
     </head>
     <body>
