search tours integrated

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
                 </svg>
             </button>
             <input
+                name="search"
                 type="text"
                 placeholder="Search tours"
                 class="nav__search-input"
