--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,143 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/css/style.css" />
-        <title>My Account</title>
-    </head>
-    <body>
-        <%- include("./partials/header") %>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>My Account</title>
+</head>
+
+<body>
+    <%- include("./partials/header") %>
 
         <main class="main">
             <div class="user-view">
                 <nav class="user-view__menu">
                     <ul class="side-nav">
                         <li class="side-nav--active">
-                            <a href="#"
-                                ><svg>
-                                    <use
-                                        xlink:href="img/icons.svg#icon-settings"
-                                    ></use></svg
-                                >Settings</a
-                            >
+                            <a href="#"><svg>
+                                    <use xlink:href="img/icons.svg#icon-settings"></use>
+                                </svg>Settings</a>
                         </li>
                         <li>
-                            <a href="/my-bookings"
-                                ><svg>
-                                    <use
-                                        xlink:href="img/icons.svg#icon-briefcase"
-                                    ></use></svg
-                                >My bookings</a
-                            >
+                            <a href="/my-bookings"><svg>
+                                    <use xlink:href="img/icons.svg#icon-briefcase"></use>
+                                </svg>My bookings</a>
                         </li>
                         <li>
-                            <a href="#"
-                                ><svg>
-                                    <use
-                                        xlink:href="img/icons.svg#icon-star"
-                                    ></use></svg
-                                >My reviews</a
-                            >
+                            <a href="#"><svg>
+                                    <use xlink:href="img/icons.svg#icon-star"></use>
+                                </svg>My reviews</a>
                         </li>
                         <li>
-                            <a href="#"
-                                ><svg>
-                                    <use
-                                        xlink:href="img/icons.svg#icon-credit-card"
-                                    ></use></svg
-                                >Billing</a
-                            >
+                            <a href="#"><svg>
+                                    <use xlink:href="img/icons.svg#icon-credit-card"></use>
+                                </svg>Billing</a>
                         </li>
                     </ul>
-                    <%if(user.role == "admin"){%>
-                    <div class="admin-nav">
-                        <h5 class="admin-nav__heading">Admin</h5>
-                        <ul class="side-nav">
-                            <li>
-                                <a href="#"
-                                    ><svg>
-                                        <use
-                                            xlink:href="img/icons.svg#icon-map"
-                                        ></use></svg
-                                    >Manage tours</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><svg>
-                                        <use
-                                            xlink:href="img/icons.svg#icon-users"
-                                        ></use></svg
-                                    >Manage users</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><svg>
-                                        <use
-                                            xlink:href="img/icons.svg#icon-star"
-                                        ></use></svg
-                                    >Manage reviews</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><svg>
-                                        <use
-                                            xlink:href="img/icons.svg#icon-briefcase"
-                                        ></use></svg
-                                    >Manage bookings</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                    <%}%>
+                    <%if(user.role=="admin" ){%>
+                        <div class="admin-nav">
+                            <h5 class="admin-nav__heading">Admin</h5>
+                            <ul class="side-nav">
+                                <li>
+                                    <a href="#"><svg>
+                                            <use xlink:href="img/icons.svg#icon-map"></use>
+                                        </svg>Manage tours</a>
+                                </li>
+                                <li>
+                                    <a href="#"><svg>
+                                            <use xlink:href="img/icons.svg#icon-users"></use>
+                                        </svg>Manage users</a>
+                                </li>
+                                <li>
+                                    <a href="#"><svg>
+                                            <use xlink:href="img/icons.svg#icon-star"></use>
+                                        </svg>Manage reviews</a>
+                                </li>
+                                <li>
+                                    <a href="#"><svg>
+                                            <use xlink:href="img/icons.svg#icon-briefcase"></use>
+                                        </svg>Manage bookings</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <%}%>
                 </nav>
                 <div class="user-view__content">
                     <div class="user-view__form-container">
                         <h2 class="heading-secondary ma-bt-md">
                             Your account settings
                         </h2>
-                        <form
-                            class="form form-user-data"
-                            action="/me"
-                            method="post"
-                            enctype="application/x-www-form-urlencoded"
-                        >
+                        <form class="form form-user-data" action="/me" method="post"
+                            enctype="application/x-www-form-urlencoded">
                             <div class="form__group">
-                                <label class="form__label" for="name"
-                                    >Name</label
-                                ><input
-                                    class="form__input"
-                                    id="name"
-                                    type="text"
-                                    value="<%= user.name %>"
-                                    required="required"
-                                    name="name"
-                                />
+                                <label class="form__label" for="name">Name</label><input class="form__input" id="name"
+                                    type="text" value="<%= user.name %>" required="required" name="name" />
                             </div>
                             <div class="form__group ma-bt-md">
-                                <label class="form__label" for="email"
-                                    >Email address</label
-                                ><input
-                                    class="form__input"
-                                    id="email"
-                                    type="email"
-                                    value="<%= user.email %>"
-                                    required="required"
-                                    name="email"
-                                />
+                                <label class="form__label" for="email">Email address</label><input class="form__input"
+                                    id="email" type="email" value="<%= user.email %>" required="required"
+                                    name="email" />
                             </div>
                             <div class="form__group form__photo-upload">
-                                <img
-                                    class="form__user-photo"
-                                    src="img/users/<%= user.photo %>"
-                                    alt="User photo"
-                                /><a class="btn-text" href=""
-                                    >Choose new photo</a
-                                >
+                                <img class="form__user-photo" src="img/users/<%= user.photo %>" alt="User photo" /><a
+                                    class="btn-text" href="">Choose new photo</a>
                             </div>
                             <div class="form__group right">
                                 <button class="btn btn--small btn--green">
@@ -151,46 +97,21 @@
                         <h2 class="heading-secondary ma-bt-md">
                             Password change
                         </h2>
-                        <form class="form form-user-settings">
+                        <form class="form form-change-password form-user-settings">
                             <div class="form__group">
-                                <label
-                                    class="form__label"
-                                    for="password-current"
-                                    >Current password</label
-                                ><input
-                                    class="form__input"
-                                    id="password-current"
-                                    type="password"
-                                    placeholder="••••••••"
-                                    required="required"
-                                    minlength="8"
-                                />
+                                <label class="form__label" for="password-current">Current password</label><input
+                                    class="form__input" id="password-current" type="password" placeholder="••••••••"
+                                    required="required" minlength="8" />
                             </div>
                             <div class="form__group">
-                                <label class="form__label" for="password"
-                                    >New password</label
-                                ><input
-                                    class="form__input"
-                                    id="password"
-                                    type="password"
-                                    placeholder="••••••••"
-                                    required="required"
-                                    minlength="8"
-                                />
+                                <label class="form__label" for="password">New password</label><input class="form__input"
+                                    id="password" type="password" placeholder="••••••••" required="required"
+                                    minlength="8" />
                             </div>
                             <div class="form__group ma-bt-lg">
-                                <label
-                                    class="form__label"
-                                    for="password-confirm"
-                                    >Confirm password</label
-                                ><input
-                                    class="form__input"
-                                    id="password-confirm"
-                                    type="password"
-                                    placeholder="••••••••"
-                                    required="required"
-                                    minlength="8"
-                                />
+                                <label class="form__label" for="password-confirm">Confirm password</label><input
+                                    class="form__input" id="password-confirm" type="password" placeholder="••••••••"
+                                    required="required" minlength="8" />
                             </div>
                             <div class="form__group right">
                                 <button class="btn btn--small btn--green">
@@ -203,5 +124,8 @@
             </div>
         </main>
         <%- include("./partials/footer") %>
-    </body>
+            <script src="/js/changePassword.js"></script>
+
+</body>
+
 </html>
